tried adding in some css classes, also added in About Alex Eesley row and column info as a test

--- a/style.css
+++ b/style.css
@@ -2,3 +2,15 @@
     background-color:lightgrey;
     width: 100%;
 }
+
+.main-section{
+    background-color: lightpink;
+}
+
+.body{
+    background-color: lightpink;
+}
+
+.media-body{
+    overflow: visible;
+}
