--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
-.container{
+.container-fluid{
     background-color:lightgrey;
     width: 100%;
 }
 
 .main-section{
-    background-color: lightpink;
-}
+    background-color: white;
+    padding: 25px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 60px;
+    margin-bottom: 40px;
 
-.body{
-    background-color: lightpink;
 }
 
 .media-body{
