adjusted margins on jumbotron in stylesheet

--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
 .jumbotron{
     padding: 40px;
     margin-top: 80px;
+    margin-right: 20px;
+    margin-bottom: 60px;
+    margin-left: 20px;
 
 }
 /* .main-section{
