--- a/style.css
+++ b/style.css
@@ -23,8 +23,11 @@
 
 footer{
     background-color: black;
-    height: 40px;
+    height: 60px;
     width: 100%;
+    position: fixed;
+    left: 0;
+    bottom: 0;
 }
 
 .footer-top-row{
@@ -34,6 +37,6 @@ footer{
 
 .footer-text{
     text-align: center;
-    color: grey;
-    padding-top: 10px;
+    color: darkgray;
+    padding-top: 15px;
 }
