--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@
     width: 100%;
 }
 
+.navbar-brand{
+    background-color: turquoise;
+    color: white;
+    font-weight: bold;
+
+}
+
 .jumbotron{
     padding: 40px;
     margin-top: 80px;
