--- a/style.css
+++ b/style.css
@@ -2,11 +2,31 @@
     width: 100%;
 }
 
-.navbar-brand{
+/* .navbar-brand{
     background-color: turquoise;
     color: white;
     font-weight: bold;
 
+} */
+
+.navbar-brand{
+    font-size: 20px;
+    background-color: turquoise;
+    color: white;
+}
+
+.nav-list{
+    list-style-type: none;
+    text-align: left;
+}
+
+.nav-list li{
+    display: inline-block;
+    /* padding: 10px; */
+    font-size: 15px;
+    margin: 5px;
+    margin-top: 10px;
+    color: black;
 }
 
 .jumbotron{
