fixed nav bar justification issue with Dave's assistance using the flex box code in css

--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@
     color: black;
 }
 
+.nav-align-custom{
+    display: flex;
+    justify-content: flex-end;
+}
+
 .jumbotron{
     padding: 40px;
     margin-top: 80px;
